# dissecting-vlm

./: .gitignore  README.md  database.py  dissecting_vlm.ipynb  main.py  populate_database.py  pyproject.toml  unembed.ipynb  validate_database.py  vlm_dissector.py  vlm_tools.py
open_images_sample/: download.py
research/: 0_dataset_context.ipynb  1_finding_outlier_positions.ipynb  1_token_position_structure.ipynb  2_outlier_positions_under_rotation.ipynb  2_token_rotation_experiment.ipynb  3_cross_image_outlier_similarity.ipynb  database.py  validate_database.py  vlm_tools.py
research/open_images/: 1_token_position_structure.ipynb  populate_embeddings.py
video/: README.md  vlm_tools.py
video-1-how-ai-sees/: README.md  dissecting_vlm.ipynb
video-2-mystery-of-193/: 0_dataset_context.ipynb  1_finding_outlier_positions.ipynb  2_outlier_positions_under_rotation.ipynb  3_cross_image_outlier_similarity.ipynb  README.md  vlm_tools.py
