[project]
name = "dissecting-vlm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "boto3>=1.42.25",
    "duckdb>=1.4.0",
    "einops>=0.8.1",
    "jupyter>=1.1.1",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "ruff>=0.13.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.2",
]

[tool.ruff.lint]
select = ["I"]  # Enable isort rules

[tool.ruff.lint.isort]
known-first-party = ["vlm_tools"]
